tests/baselines/reference/reachabilityChecks8.errors.txt
reachabilityChecks8.ts(4,24): error TS7027: Unreachable code detected.
reachabilityChecks8.ts(5,24): error TS7027: Unreachable code detected.


==== reachabilityChecks8.ts (2 errors) ====
    try {
        for (
            (function () { throw "1"; })();
            (function () { throw "2"; })();
                           ~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
            (function () { throw "3"; })()
                           ~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
        ) {}
    } catch (e) {}
    